--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+
+        <nav>
+            <h1>NavBar</h1>
+        </nav>
+
+        <header>
+            <button>New</button>
+            <button>Upload</button>
+        </header>
+
+        <div>
+            <h2>Aside</h2>
+                <p>Folder</p>
+                <p>Folder</p>
+        </div>
+
+        <div>
+            <h2>Open Folder</h2>
+            <button>Edit</button>
+            <button>Delete</button>
+
+        </div>
+
+
+</main>
 </body>
 </html>
